Modifiers don't render in sculpt mode using multires #42175

Closed
opened 2014-10-10 20:12:39 +02:00 by Sebastian Platen · 7 comments

System Information
Linux Xubuntu, GTX 760

Blender Version
Blender 2.72

Modiefiers don't render (final render, not viewport) when using multires modifier,
(it is normal that they won't work in preview/rendered view, because modiefiers don't work in sculpt mode with multi res, but that should not affect the final rendered image in sculpt mode)
the bug only appears with the selected object

blender_multires_render_bug.blend

this file has two objects, one with multires modifier, the other without multires, both objects have displace modifiers to test if they render
the image file makes it easier to reproduce
sculpt_modifier_bug.png

the first image shows the rendered output while beeing in object mode, all is normal
the second one shows the rendered output in sculpt mode, the selected object is the object with multires
(it is normal that it does not show the displace modifier in viewport!, but in render it should work (bug!))
the third image shows a render in sculpt mode, but the selected object does not have multires

**System Information** Linux Xubuntu, GTX 760 **Blender Version** Blender 2.72 Modiefiers don't render (final render, not viewport) when using multires modifier, (it is normal that they won't work in preview/rendered view, because modiefiers don't work in sculpt mode with multi res, but that should not affect the final rendered image in sculpt mode) the bug only appears with the selected object [blender_multires_render_bug.blend](https://archive.blender.org/developer/F115760/blender_multires_render_bug.blend) this file has two objects, one with multires modifier, the other without multires, both objects have displace modifiers to test if they render the image file makes it easier to reproduce ![sculpt_modifier_bug.png](https://archive.blender.org/developer/F115764/sculpt_modifier_bug.png) the first image shows the rendered output while beeing in object mode, all is normal the second one shows the rendered output in sculpt mode, the selected object is the object with multires (it is normal that it does not show the displace modifier in viewport!, but in render it should work (bug!)) the third image shows a render in sculpt mode, but the selected object does not have multires

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @SebastianPlaten

Added subscriber: @SebastianPlaten

Low priority because you normally don't render in sculpting mode

Low priority because you normally don't render in sculpting mode
Sergey Sharybin self-assigned this 2014-11-04 15:12:00 +01:00

Goes to my desk.

Goes to my desk.

This issue was referenced by 59f1585d02

This issue was referenced by 59f1585d020c2df7f11f89660f0d2d6ce87c5289

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 59f1585d02.

Closed by commit 59f1585d02.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42175
No description provided.