Fix T42175: Modifiers don't render in sculpt mode using multires

Modifier stack should ignore sculpt restrictions when creating derived render.